<resources>
    <string name="app_name">Nuppin</string>
    <string name="erro_local">Você deve habilitar as permissões para utilizar o aplicativo.</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="relatorio_toolbar">Relatório</string>
    <string name="financeiro_toolbar">Financeiro</string>
    <string name="perfil_toolbar">Perfil</string>
    <string name="detalhe_toolbar">Detalhe</string>
    <string name="equipe_toolbar">Equipe</string>
    <string name="config_toolbar">Configurações</string>
    <string name="warning_raio_min">O raio de atendimento mínimo é de 1 km</string>
    <string name="warning_time">Defina o tempo de entrega</string>
    <string name="warning_raio_min_free">O raio mínimo de entrega grátis é de 1 km</string>
    <string name="warning_check_delivery_before_set_payment_method">Defina os meios de pagamentos da sua loja antes de permitir entregas</string>
    <string name="warning_check_retirada_before_set_payment_method">Defina os meios de pagamentos da sua loja antes de permitir retiradas</string>
    <string name="warning_value_of_delivery">Defina o valor da entrega</string>
    <string name="warning_no_delivery_type_selected">Selecione alguma forma de entrega</string>
    <string name="payment_methods">Pagamentos</string>
    <string name="pagamento_na_entrega">Pagamentos na entrega</string>
    <string name="not_available">Não está disponível ainda</string>
    <string name="pagamento_online">Pagamento Online</string>
    <string name="warning_about_time">Precisa adicionar os horários</string>
    <string name="warning_about_days">Precisa selecionar ao menos um dia</string>
    <string name="error">Houve algum erro de conexão</string>
    <string name="select_the_days_of_that_time">Selecione os dias para esse horário</string>
    <string name="btn_save">SALVAR</string>
    <string name="selecione_horario">Selecione um horário</string>
    <string name="hint_hora_inicio">Hora inicio</string>
    <string name="hint_hora_termino">Hora termino</string>
    <string name="horarios_toolbar">Horários</string>
    <string name="btn_update">Atualizar</string>
    <string name="faturas_toolbar">Faturas</string>
    <string name="produtos_toolbar">Produtos</string>
    <string name="lista_servicos_empty_recycler">Você ainda não tem serviços cadastrados</string>
    <string name="lista_servicos_empty_recycler_sub">Mostre o que tem a oferecer e conquiste clientes</string>
    <string name="error_enabled_text">Preencha este campo</string>
    <string name="hint_nome_do_produto">Nome do produto</string>
    <string name="hint_valor">Valor</string>
    <string name="hint_preco">Preço</string>
    <string name="hint_preco_adicional">Preço adicional</string>
    <string name="hint_duracao">Duração</string>
    <string name="hint_descricao">Descrição</string>
    <string name="description_image_empty_servico">Sem serviço cadastrado</string>
    <string name="servico_duracao">Duração: %1$d min •</string>
    <string name="servico_in_service_equipe">Equipe • %1$s</string>
    <string name="hint_nome_do_servico">Nome do serviço</string>
    <string name="criarEditarServico_duracao_warning">A duração do serviço não pode ser menor que 10 minutos</string>
    <string name="criarEditarServico_duracao_min_value">%1$d min</string>
    <string name="criarEditarServico_duracao_min_value_default">0 min</string>
    <string name="desvinculado_sucesso">Desvinculado com sucesso</string>
    <string name="warning_before_add_employee_to_service">Adicione horário de trabalho ao seu funcionario antes de coloca-lo em um serviço</string>
    <string name="employee_time_with_dot"> %1$s • %2$s</string>
    <string name="set_time_of_employee_before_update_them">Preencha os campos de horários</string>
    <string name="txtHorario">Horário</string>
    <string name="AdicionarCupom_warning_tipo_desconto">Selecione o tipo de desconto</string>
    <string name="AdicionarCupom_warning_target">Selecione quem recebera o cupom</string>
    <string name="cupom_toolbar">Cupom</string>
    <string name="warning_settings_before_cupom">Configure sua empresa antes de aplicar cupons</string>
    <string name="cupom_expirado">EXPIRADO</string>
    <string name="cupom_minutos">%1$d min</string>
    <string name="cupom_horas">%1$d : %2$d min</string>
    <string name="cupom_dias_minutos">%1$d %2$s, %3$d min</string>
    <string name="cupom_dias_horas">%1$d %2$s, %3$d: %4$d min</string>
    <string name="dias">dias</string>
    <string name="dia">dia</string>
    <string name="cupom_porcento">%1$s %%</string>
    <string name="set_time">%1$d:%2$d</string>
    <string name="warning_pdf">Nenhuma aplicação disponível para abrir o PDF</string>
    <string name="warning_financeiro_cadastro">Selecione o tipo da movimentação</string>
    <string name="warning_select_date_financeiro">Seleciona uma data</string>
    <string name="error_photo">problemas ao salvar a foto</string>
    <string name="despesa">Despesa</string>
    <string name="receita">Receita</string>
    <string name="invalid_email">Email inválido</string>
    <string name="user_or_password_invalid">Usuário ou senha inválidos</string>
    <string name="invalid_name">Nome inválido</string>
    <string name="minimo_seis_caracteres">Mínimo de 6 caracteres</string>
    <string name="email_exist">Email já cadastrado</string>
    <string name="warning_before_update_status_order">Avalie primeiro</string>
    <string name="aceitar">ACEITAR</string>
    <string name="entregar">ENTREGAR</string>
    <string name="confirmar_entrega">CONFIRMAR ENTREGA</string>
    <string name="avaliar">AVALIAR</string>
    <string name="retirada">RETIRADA</string>
    <string name="order_user_nome_rating">%1$s • %2$d</string>
    <string name="user_no_rated">Novo!</string>
    <string name="upload_error">Prolema ao efetuar o upload</string>
    <string name="produtos_bottom">Produtos</string>
    <string name="servicos_bottom">Serviços</string>
    <string name="faturas_bottom">Faturas</string>
    <string name="relatorio_bottom">Relatório</string>
    <string name="cupom_bottom">Cupom</string>
    <string name="financeiro_bottom">Financeiro</string>
    <string name="equipe_bottom">Equipe</string>
    <string name="agendar_bottom">Agendar manual</string>
    <string name="vender_bottom">Vender manual</string>
    <string name="novo">Novo</string>
    <string name="novos">Novos</string>
    <string name="em_andamento">Em andamento</string>
    <string name="entregando">Entregando</string>
    <string name="concluido">Concluído</string>
    <string name="concluidos">Concluídos</string>
    <string name="warning_settings_before_on">Defina as configurações antes de iniciar</string>
    <string name="notification_message_on">A sua loja está aberta</string>
    <string name="notification_title_on">Você esta online</string>
    <string name="turn_on_gps">Ative o GPS</string>
    <string name="location_error">Houve um erro ao pegar sua localização</string>
    <string name="em_espera">em espera</string>
    <string name="inativo">Inativo</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="rating_and_number">%1$s • %2$d</string>
    <string name="fatura_em_aberto">Fatura em aberto</string>
    <string name="error_online">Não foi possível ficar online</string>
    <string name="offline_erro">Não foi possível ficar offline</string>
    <string name="warning_before_update_store_name">O nome não pode ficar vazio</string>
    <string name="cpf_invalido">CPF invalido</string>
    <string name="plano_mes">%1$s / mês</string>
    <string name="entrega_min_max">%1$s min</string>
    <string name="entrega_min_max_int">%1$d minutos</string>
    <string name="raio_km">%1$d km</string>
    <string name="cupom_tipo_desconto">Tipo de desconto</string>
    <string name="cupom_valor_fixo">Valor fixo (R$)</string>
    <string name="cupom_valor_variavel">Porcentagem (%)</string>
    <string name="cupom_target">Quem recebera esse cupom?</string>
    <string name="cupom_todos">Todos</string>
    <string name="cupom_novos_clientes">Novos Clientes</string>
    <string name="cupom_clientes">Clientes</string>
    <string name="hint_quantidade">Quantidade</string>
    <string name="cupom_valor_minimo_compra_switch">Valor mínimo de compra?</string>
    <string name="valor_minimo_compra">Valor mínimo  de compra - R$</string>
    <string name="cupom_dias_validade">Dias de validade</string>
    <string name="btn_adicionar">ADICIONAR</string>
    <string name="funcionario_info_add">Para ser membro da equipe, é necessário que tenha uma conta Nuppin, e que tenha cadastrado o CPF no perfil.</string>
    <string name="funcionario_hint_id_funcionario">CPF do usuário</string>
    <string name="config_horarios_btn">Horários</string>
    <string name="config_meio_pagamento_btn">Meios de pagamento</string>
    <string name="config_definicoes_txt">Definições</string>
    <string name="config_check_entregas_locais">Entregas locais</string>
    <string name="config_check_retiradas">Retirada</string>
    <string name="config_check_pdv">Venda Presencial</string>
    <string name="config_detalhe_entrega_txt">Detalhes de entrega</string>
    <string name="config_raio_atendimento_sub">Defina o seu raio de atendimento, apenas clientes dentro desse raio poderão encontrar você</string>
    <string name="config_raio_default_value">0 km</string>
    <string name="config_tempo_entrega">Tempo de entrega:</string>
    <string name="config_tempo_minimo">Mínimo</string>
    <string name="config_tempo_maximo">Máximo</string>
    <string name="config_preco_fixo">Preço fixo</string>
    <string name="config_fixo_variavel">Preço fixo + variável por distancia</string>
    <string name="config_variavel">Apenas variável por distancia</string>
    <string name="config_entrega_gratis">Entrega grátis</string>
    <string name="hint_preco_fixo">R$ Preço fixo</string>
    <string name="config_hint_variavel">R$ Preço variável por Km</string>
    <string name="config_switch_frete_gratis">Oferecer frete grátis para curtas distancias?</string>
    <string name="config_pdv_servico">Agendamento manual</string>
    <string name="config_agendamento_online">Agendamento Online</string>
    <string name="financeiro_titulo_movimentacao">Titulo</string>
    <string name="hint_data">Data</string>
    <string name="servico_func_empty">Ainda não tem profissionais nesse serviço</string>
    <string name="servico_func_empty_sub">É preciso adicionar os profissionais da equipe em cada serviço para que seja gerado os horários para agendamento</string>
    <string name="hint_nome_empresa">Nome da empresa</string>
    <string name="txt_alterar_foto">Alterar Imagem</string>
    <string name="erro_layout_title">Ocorreu algum erro!</string>
    <string name="erro_layout_sub">Não sabemos o que foi, mas algo deu errado. Tente novamente</string>
    <string name="fatura_abrev_venc">venc : </string>
    <string name="fatura_data">data : </string>
    <string name="fatura_descricao">Descrição</string>
    <string name="fatur_codigo_boleto">Código Boleto</string>
    <string name="fatura_pdf">PDF</string>
    <string name="fatura_copiar">COPIAR</string>
    <string name="fatura_ver_detalhes">Ver Detalhes</string>
    <string name="empty_cupom">Nenhum cupom ativado!</string>
    <string name="empty_cupom_sub">Crie um cupom para seus clientes</string>
    <string name="anexo">Anexo</string>
    <string name="de">De</string>
    <string name="ate">Até</string>
    <string name="receitas_e_despesas">Receitas e Despesas</string>
    <string name="empty_financeiro">Sem movimentações</string>
    <string name="qual_sera_forma_cadastro">Qual será a forma de cadastro?</string>
    <string name="cpf">CPF</string>
    <string name="cnpj">CNPJ</string>
    <string name="deletar_servico">Deletar Serviço</string>
    <string name="porcentagem">Porcentagem</string>
</resources>