<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_color">

    <include
        android:id="@+id/tb_main_top"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_main_top">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="5dp"
        android:id="@+id/cardTipoDesc">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/txtTipoDes"
                android:text="@string/cupom_tipo_desconto"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"/>

            <RadioGroup
                app:layout_constraintTop_toBottomOf="@id/txtTipoDes"
                android:id="@+id/radioGroup"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton

                    android:id="@+id/valorFixo"
                    android:layout_width="wrap_content"
                    android:layout_margin="4dp"
                    android:fontFamily="sans-serif-light"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_height="wrap_content"
                    android:text="@string/cupom_valor_fixo"/>

                <RadioButton
                    android:layout_margin="4dp"
                    android:id="@+id/porcentagem"
                    android:fontFamily="sans-serif-light"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cupom_valor_variavel"/>

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/cardTipoDesc"
        android:id="@+id/cardTipoAlvo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/txtTipoAlvo"
                android:text="@string/cupom_target"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"/>

            <RadioGroup
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/txtTipoAlvo"
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton

                    android:id="@+id/todos"
                    android:layout_width="wrap_content"
                    android:layout_margin="4dp"
                    android:fontFamily="sans-serif-light"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_height="wrap_content"
                    android:text="@string/cupom_todos"/>

                <RadioButton
                    android:layout_margin="4dp"
                    android:id="@+id/novos"
                    android:fontFamily="sans-serif-light"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cupom_novos_clientes"/>

                <RadioButton
                    android:layout_margin="4dp"
                    android:id="@+id/clientes"
                    android:fontFamily="sans-serif-light"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cupom_clientes"/>

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_margin="16dp"
            android:id="@+id/linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/qtdWrap"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardTipoAlvo"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/valorWrap"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hint_valor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="8dp"
                    android:background="@color/default_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/valor"
                    android:maxLength="@integer/valor"
                    android:textColor="@color/secondary_text"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@id/qtd"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/percentWrap"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/porcentagem"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_marginTop="8dp"
                    android:background="@color/default_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/percent"
                    android:maxLength="@integer/valor"
                    android:textColor="@color/secondary_text"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@id/qtd"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/cardTipoAlvo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantidade"
            android:id="@+id/qtdWrap"
            android:minWidth="100dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginTop="8dp"
                android:background="@color/default_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/cupom_qtd"
                android:inputType="number"
                android:id="@+id/qtd"
                android:textColor="@color/secondary_text"/>

        </com.google.android.material.textfield.TextInputLayout>


    <Switch
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cupom_valor_minimo_compra_switch"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintLeft_toLeftOf="@id/linear"
        android:layout_marginTop="16dp"
        android:switchPadding="16dp"
        android:id="@+id/minCompra"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="16dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/minCompra"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/valor_minimo_compra"
            android:id="@+id/minCompraValorWrap"
            android:minWidth="100dp">

            <com.google.android.material.textfield.TextInputEditText
                android:background="@drawable/edit_text"
                android:textColor="@color/secondary_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLength="@integer/valor"
                android:inputType="number"
                android:id="@+id/minCompraValor"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/edit_text"
            android:id="@+id/linearSpinner"
            app:layout_constraintTop_toBottomOf="@id/minCompraValorWrap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/txt"
                android:layout_margin="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:fontFamily="sans-serif-light"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:text="@string/cupom_dias_validade"/>

            <Spinner
                android:entries="@array/dias"
                android:id="@+id/spinner"
                android:layout_margin="8dp"
                android:layout_width="0dp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/txt"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/linearSpinner"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="1.0"
        android:text="@string/btn_adicionar"
        android:id="@+id/btnAdicionar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        layout="@layout/progress"
        android:id="@+id/progress"/>

</androidx.constraintlayout.widget.ConstraintLayout>
