<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_color">

    <include
        layout="@layout/toolbar"
        android:id="@+id/tb_main_top"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tb_main_top"
        app:layout_constraintBottom_toBottomOf="parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingRight="12dp"
    android:paddingLeft="12dp"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/nomeWrap"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_nome_do_servico"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nome"
            android:layout_marginTop="8dp"
            android:background="@color/default_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@integer/nome_item"
            android:inputType="textCapSentences|text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="8dp"
        android:id="@+id/precoWrap"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeWrap"
        android:hint="@string/hint_preco">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/preco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLength="@integer/valor"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txtDuracao"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_duracao"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/precoWrap"
        app:layout_constraintBottom_toTopOf="@id/duracao"/>

    <SeekBar
        android:id="@+id/duracao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/txtValueDuracao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDuracao"
        android:max="18"/>

    <TextView
        android:text="@string/criarEditarServico_duracao_min_value_default"
        android:textColor="@color/background_light"
        android:fontFamily="sans-serif-light"
        android:background="@drawable/num_rating"
        android:id="@+id/txtValueDuracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/duracao"
        app:layout_constraintBottom_toTopOf="@id/duracao"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descWrap"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_descricao"
        app:counterMaxLength="@integer/descricao"
        app:counterEnabled="true"
        app:helperTextEnabled="true"
        app:helperText="Opcional"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duracao">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:maxLength="@integer/descricao"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descWrap"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="8dp"
            android:id="@+id/botaoDeleta"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/deletar_servico"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            app:layout_constraintVertical_bias="1.0"
            android:id="@+id/botao"
            android:text="@string/btn_save"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        layout="@layout/progress"
        android:id="@+id/progress"/>

</androidx.constraintlayout.widget.ConstraintLayout>